--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Frame layout demo" />
+
+        <Button
+            android:id="@+id/floor_layout_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="floor layout" />
     </LinearLayout>
 
 </layout>
