--- a/app/src/main/res/layout/fragment_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_recycler_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/table_list"
+            android:id="@+id/tableRecyclerList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
