--- a/app/src/main/res/layout/table_item_view.xml
+++ b/app/src/main/res/layout/table_item_view.xml
@@ -9,8 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/item_table_width"
+        android:layout_height="@dimen/item_table_height"
         android:layout_marginStart="3dp"
         android:layout_marginEnd="3dp"
         android:background="@drawable/item_view_bg">
