--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="layout_width">1020dp</dimen>
+    <dimen name="layout_height">900dp</dimen>
+
     <dimen name="item_table_width">92dp</dimen>
     <dimen name="item_table_height">80dp</dimen>
+
+    <dimen name="item_space_width">102dp</dimen>
+    <dimen name="item_space_height">90dp</dimen>
+
+    <dimen name="floor_layout_width">1000dp</dimen>
 </resources>
