--- a/app/src/main/res/layout/table_item_view.xml
+++ b/app/src/main/res/layout/table_item_view.xml
@@ -8,7 +8,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout"
+        android:id="@+id/outerLayout"
         android:layout_width="@dimen/item_table_width"
         android:layout_height="@dimen/item_table_height"
         android:layout_marginStart="3dp"
