--- a/app/src/main/res/layout/activity_floor_layout.xml
+++ b/app/src/main/res/layout/activity_floor_layout.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/selectedTableText" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/deleteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
